# bazel-prompb

./: BUILD.bazel  WORKSPACE  go.mod
cmd/: main.go
prompb/: BUILD.bazel  README.md  go.sum
prompb/cmd/: BUILD.bazel
