load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/base698/bazel-prompb/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_prometheus_prometheus//prompb:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
